Made flatten ingredients list unmodifiable